# piffle

./: .gitignore  .pre-commit-config.yaml  .python-version  .ruff.toml  .travis.yml  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  setup.py  setup_gitflow.sh  yamlfmt.yml
.githooks/: pre-flow-release-start
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: software_release.md
.github/workflows/: changelog.yml  codeql.yml  pr-check.yml  python-publish.yml  ruff-checks.yml  unit-tests.yml  unit_tests.yml
gitflow-hooks/: post-flow-release-finish  pre-flow-release-start
piffle/: iiif.py  image.py  load_iiif.py  presentation.py  utils.py
piffle/iiif_dataclasses/: __init__.py  base.py  image2.py  image3.py  presentation2.py  presentation3.py
src/piffle/: image.py  presentation.py
src/piffle/iiif_dataclasses/: dataclass_utils.py  image2.py  presentation2.py
tests/: test_image.py  test_piffle.py  test_presentation.py
tests/fixtures/: georeference_annotation3.json
tests/test_iiif_dataclasses/: test_presentation2.py  test_presentation3.py
